Added the JSON string filtering utility method.

--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>json.string.converter</groupId>
-  <artifactId>json-string-converter</artifactId>
+  <groupId>org.marcelus.json.string.utils</groupId>
+  <artifactId>marcelus-json-string-utils</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
-  <name>json-string-converter</name>
+  <name>marcelus-json-string-utils</name>
 
-  <description>Filters a json string attributes into a new json string.</description>
+  <description>Utility lib for JSON</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.0-rc2</version>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -67,6 +75,14 @@
       <plugin>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>3.0.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
