--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
       <version>2.14.0-rc2</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.24</version>
+      <scope>provided</scope>
+    </dependency>
+
+
 
     <dependency>
       <groupId>junit</groupId>
