--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.marcelus.json.string.utils</groupId>
   <artifactId>marcelus-json-string-utils</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <name>marcelus-json-string-utils</name>
 
